adjust mobile response

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <!-- MEET THE TEAM -->
             <section class="bottom" id="team">
                   <div class="container team">
-                        <h1>MEET OUT TEAM</h1>
+                        <h1>MEET OUR TEAM</h1>
 
                         <div class="team-box">
 
