adjust mobile response

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                   <ul>
                         <li><a href="#logo">Home</a></li>
                         <li><a href="#classes">Classes</a></li>
-                        <li><a href="team">Teachers</a></li>
-                        <li><a href="footer">Contact</a></li>
+                        <li><a href="#team">Teachers</a></li>
+                        <li><a href="#footer-logo">Contact</a></li>
                   </ul>
             </nav>
       </header>
